--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Trabajo Practico N° 4 POO - Objetos y Clases</title>
 </head>
 <body>
-    
+    <!-- <script src="./js/Ejercicio 1.js"></script> -->
+    <!-- <script src="./js/Ejercicio 2.js"></script> -->
+    <script src="./js/Ejercicio 3.js"></script>
 </body>
 </html>
